==> liu-delong/lu_xing_xiang_one_os/drivers/hal/gd32v/hal_drivers/drv_gpio.c <==
#include <drv_gpio.h>
#include <os_hw.h>
#include <os_device.h>
#include <os_irq.h>
#include <os_memory.h>
#include <os_errno.h>
#include <misc/pin.h>
#include "gd32vf103.h"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void GD32_pin_write(struct os_device *dev, os_base_t pin, os_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }
    gpio_bit_write(index->gpio_port, index->pin, (bit_status)value);
}

static int GD32_pin_read(struct os_device *dev, os_base_t pin)
{
    int                     value = PIN_LOW;
    const struct pin_index *index;
    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return value;
    }

    value = gpio_input_bit_get(index->gpio_port, index->pin);

    return value;
}

static void GD32_pin_mode(struct os_device *dev, os_base_t pin, os_base_t mode)
{
    const struct pin_index *index;
    uint32_t set_mode = GPIO_MODE_OUT_PP;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return;
    }
    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        set_mode = GPIO_MODE_OUT_PP;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        set_mode = GPIO_MODE_IN_FLOATING;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        set_mode = GPIO_MODE_IPU;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        set_mode = GPIO_MODE_IPD;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        set_mode = GPIO_MODE_OUT_OD;
    }
    rcu_periph_clock_enable(index->clk);
    gpio_init(index->gpio_port, set_mode, GPIO_OSPEED_50MHZ, index->pin);
}

static os_err_t GD32_pin_irq_enable(struct os_device *device, os_base_t pin, os_uint32_t enabled)
{
    const struct pin_index   *index;
    const struct pin_irq_map *irqmap;
    os_base_t                 level;
    os_int32_t                irqindex = -1;
    exti_trig_type_enum       trigger_mode;

    index = get_pin(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    if (enabled == PIN_IRQ_ENABLE)
    {
        irqindex = bit2bitno(index->pin);
        if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
        {
            return OS_ENOSYS;
        }

        level = os_hw_interrupt_disable();

        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            os_hw_interrupt_enable(level);
            return OS_ENOSYS;
        }

        irqmap = &pin_irq_map[irqindex];

        /* Configure GPIO_InitStructure */
        switch (pin_irq_hdr_tab[irqindex].mode)
        {
        case PIN_IRQ_MODE_RISING:
            trigger_mode = EXTI_TRIG_RISING;
            break;
        case PIN_IRQ_MODE_FALLING:
            trigger_mode = EXTI_TRIG_FALLING;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            trigger_mode = EXTI_TRIG_BOTH;
            break;
        default:
            os_hw_interrupt_enable(level);
            return OS_EINVAL;
        }

        /* enable the Wakeup clock */
        rcu_periph_clock_enable(index->clk);
        rcu_periph_clock_enable(RCU_AF);

        /* configure button pin as input */
        // gpio_init(index->gpio_port, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, index->pin);
        /* enable and set key EXTI interrupt to the lowest priority */
        eclic_irq_enable(irqmap->irqno, 2, 2);
        /* connect key EXTI line to key GPIO pin */
        gpio_exti_source_select(index->port_src, index->pin_src);
        /* configure key EXTI line */
        exti_init((exti_line_enum)(index->pin), EXTI_INTERRUPT, trigger_mode);
        exti_interrupt_flag_clear((exti_line_enum)(index->pin));

        os_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        irqmap = get_pin_irq_map(index->pin);
        if (irqmap == OS_NULL)
        {
            return OS_ENOSYS;
        }
        level = os_hw_interrupt_disable();
        eclic_irq_disable(irqmap->irqno);
        os_hw_interrupt_enable(level);
    }
    else
    {
        return OS_ENOSYS;
    }

    return OS_EOK;
}

int os_hw_pin_init(void)
{
    rcu_periph_clock_enable(RCU_GPIOA);
    rcu_periph_clock_enable(RCU_GPIOB);
    return os_device_pin_register(0, &_GD32_pin_ops, OS_NULL);
}
